fixed the mobile issue with bgWrap

--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,7 @@ body {
   }
   .bgWrap {
     overflow: hidden;
+    visibility: hidden;
   }
 
   .faq {
